2008-02-27  Alexander Hixon  <hixon.alexander@mediati.org>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
	Only scrobble tracks if the 'Enable song reporting' checkbox is active.

2008-02-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSourceContents.cs:
	Fix crasher - don't update GTK outside the main thread.

2008-02-26  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit brings back a thread-safe database layer.  Unfortunately, that
	currently means switching back to the deprecated Mono.Data.SqliteClient
	library.  Mono.Data.Sqlite does not allow executing a command in one
	thread and reading it in another, where M.D.SqliteClient does.

	* Makefile.am: Add BANSHEE_DEV_MONO_OPTIONS env var to enable setting
	--profile=default:stat for example to run with make run.

	* build/build.environment.mk: Depend on Mono.Data.SqliteClient again.
	Mono.Data.Sqlite requires that even reading the results of a query must be
	done in the same thread that ran the query/owns the connection.

	* src/Core/Banshee.Core/Banshee.IO/Provider.cs: Clean up.

	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelProvider.cs:
	* src/Core/Banshee.Services/Banshee.SmartPlaylist/SmartPlaylistSource.cs:
	* src/Core/Banshee.Services/Banshee.SmartPlaylist/Migrator.cs:
	* src/Core/Banshee.Services/Banshee.Configuration/DatabaseConfigurationClient.cs:
	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
	* src/Core/Banshee.Services/Banshee.Playlist/PlaylistSource.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryArtistInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	New HyenaSqliteConnection API.
